--- a/binding/web/template/package.json
+++ b/binding/web/template/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@picovoice/porcupine-web-en-worker",
-  "version": "1.9.0-alpha.0",
+  "name": "$",
+  "version": "1.9.0-alpha.1",
   "description": "Porcupine web worker library for web browsers (via WebAssembly)",
   "author": "Picovoice Inc",
   "license": "Apache-2.0",
